--- a/catalog.html
+++ b/catalog.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
-  <body>
+  <body class="page-container">
     <header class="page-header">
       <!--Блок с навигацией-->
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
+        <a class="navigation-logo" href="#">
           <img class="page-heder-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            <a class="navigation-link navigation-link-current" href="#">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <!--Блок пользователя - поиск, избранное, ссылка на бронь-->
@@ -38,103 +38,109 @@
               <span class="favorite-icon-heart">12</span>
             </a>
           </li>
+          <li class="navigation-user-item">
+            <a class="header-button" href="#">Хочу сюда!</a>
+          </li>
         </ul>
       </nav>
-      <a class="header-button" href="#">Хочу сюда!</a>
     </header>
     <!--Гостиницы Седоны: фильтр -->
     <header class="catalog-header">
-      <h1>Гостиницы Седоны</h1>
-      <ol class="breadcrumbs">
+      <h1 class="catalog-header-title">Гостиницы Седоны</h1>
+      <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-home-link" href="index.html">
             <span class="visually-hidden">Главная</span>
+            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6 0L0 5.80006V12.0001H12V5.80006L6 0ZM11 11.0001H1V6.20005L6 1.4L11 6.20005V11.0001Z"
+                fill="white" />
+              <path d="M4 10.0001H5V7.50005H7V10.0001H8V6.50005H4V10.0001Z" fill="white" />
+            </svg>
           </a>
         </li>
         <li class="breadcrumbs-item">
-          <img class="breadcrumbs-icon" src="images/icons/icon-arrow.svg" width="8" height="19.94" alt="Навигационная цепочка-стрелка">
+          <img class="breadcrumbs-icon" src="images/icons/icon-arrow.svg" width="8" height="19.94"
+            alt="Навигационная цепочка-стрелка">
         </li>
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="#">Гостиницы</a>
         </li>
-      </ol>
-      <section class="filters-left">
+      </ul>
+      <section class="filters">
         <h2 class="visually-hidden">Фильтр</h2>
         <form class="hotel-catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
           <h3 class="visually-hidden">Фильтр слева, чек-боксы и радиокнопки</h3>
-          <div class="form-container-left">
-            <!--Инфраструктура, чекбоксы, множественный выбор-->
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Инфраструктура:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="pool" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">Бассейн</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="parking" checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">Парковка</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="checkbox" name="wi-fi">
-                    <span class="control-mark"></span>
-                    <span class="control-label">Wi-Fi</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <!--Тип жилья, радиокнопки, единственный выбор-->
-            <fieldset class="catalog-filter-item">
-              <legend class="catalog-filter-title">Тип жилья:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="accommodations" value="hotels"
-                      checked>
-                    <span class="control-mark"></span>
-                    <span class="control-label">Гостиница</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="accommodations" value="motel">
-                    <span class="control-mark"></span>
-                    <span class="control-label">Мотель</span>
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="visually-hidden control-input" type="radio" name="accommodations" value="apartments">
-                    <span class="control-mark"></span>
-                    <span class="control-label">Апартаменты</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-          </div>
+          <!--Инфраструктура, чекбоксы, множественный выбор-->
+          <fieldset class="catalog-filter-group catalog-filter-infrastructure">
+            <legend class="catalog-filter-title">Инфраструктура:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="pool" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">Бассейн</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="parking" checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">Парковка</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="wi-fi">
+                  <span class="control-mark"></span>
+                  <span class="control-label">Wi-Fi</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <!--Тип жилья, радиокнопки, единственный выбор-->
+          <fieldset class="catalog-filter-group catalog-filter-accommodation">
+            <legend class="catalog-filter-title">Тип жилья:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="accommodations" value="hotels"
+                    checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">Гостиница</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="accommodations" value="motel">
+                  <span class="control-mark"></span>
+                  <span class="control-label">Мотель</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="accommodations" value="apartments">
+                  <span class="control-mark"></span>
+                  <span class="control-label">Апартаменты</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
           <h3 class="visually-hidden">Фильтр справа, стоимость и кнопки применения и сброса</h3>
-          <div class="form-container-right">
-            <fieldset class="catalog-filter catalog-filter-price">
-              <!--Фильтр стоимости: поля для ввода нижней и верхней границы, бегунок-->
-              <legend class="catalog-filter-tittle">Стоимость, ₽:</legend>
-              <label class="filter-price-range">от<input type="number" name="min-value" value="0"></label>
-              <label class="filter-price-range">до<input type="number" name="max-value" value="9000"></label>
-              <button class="range-slider value-min" type="button">
-                <span class="visually-hidden">Нижняя граница стоимости</span>
-              </button>
-              <button class="range-slider value-max" type="button">
-                <span class="visually-hidden">Верхняя граница стоимости</span>
-              </button>
-            </fieldset>
-            <button class="catalog-filter-submit">Применить</button>
-            <button class="catalog-filter-reset">Сбросить</button>
+          <fieldset class="catalog-filter-group catalog-filter-price">
+            <!--Фильтр стоимости: поля для ввода нижней и верхней границы, бегунок-->
+            <legend class="catalog-filter-tittle">Стоимость, ₽:</legend>
+            <label class="filter-price-range">от<input type="number" name="min-value" value="0"></label>
+            <label class="filter-price-range">до<input type="number" name="max-value" value="9000"></label>
+            <button class="range-slider value-min" type="button">
+              <span class="visually-hidden">Нижняя граница стоимости</span>
+            </button>
+            <button class="range-slider value-max" type="button">
+              <span class="visually-hidden">Верхняя граница стоимости</span>
+            </button>
+          </fieldset>
+          <div class="filter-button-form">
+            <button class="catalog-filter-submit" type="submit">Применить</button>
+            <button class="catalog-filter-reset" type="submit">Сбросить</button>
           </div>
         </form>
       </section>
@@ -166,7 +172,8 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="images/hotels/amara.jpg" width="300" height="212" alt="Ночной вид на карьер">
+            <img class="product-card-img" src="images/hotels/amara.jpg" width="300" height="212"
+              alt="Ночной вид на карьер">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -180,7 +187,8 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="images/hotels/poco-diablo.jpg" width="300" height="212" alt="Вид на каньон с радугой после грозы">
+            <img class="product-card-img" src="images/hotels/poco-diablo.jpg" width="300" height="212"
+              alt="Вид на каньон с радугой после грозы">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -194,7 +202,8 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="images/hotels/desert-quai.jpg" width="300" height="212" alt="Каньон в свете дневного солнца">
+            <img class="product-card-img" src="images/hotels/desert-quai.jpg" width="300" height="212"
+              alt="Каньон в свете дневного солнца">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -208,7 +217,8 @@
       <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="images/hotels/greentree.jpg" width="300" height="212" alt="Каньон на фоне ночного неба">
+            <img class="product-card-img" src="images/hotels/greentree.jpg" width="300" height="212"
+              alt="Каньон на фоне ночного неба">
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
           <p class="product-card-type">Гостиница</p>
@@ -259,7 +269,7 @@
       </form>
     </section>
 
-        <!-- Подвал -->
+    <!-- Подвал -->
     <footer class="page-footer">
       <section class="footer-social">
         <h2 class="visually-hidden">О Седоне - в социальных сетях</h2>
@@ -286,7 +296,8 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="copyright" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Сделано в HTML Academy</span>
-          <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип HTML Academy">
+          <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33"
+            alt="Логотип HTML Academy">
         </a>
       </section>
     </footer>
