--- a/catalog.html
+++ b/catalog.html
@@ -29,12 +29,24 @@
         <ul class="navigation-user">
           <li class="navigation-user-item">
             <a class="navigation-user-link navigation-user-link-search" href="#">
-              <span class="visualy-hidden">Поиск</span>
+              <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M18 16.5083L14.3 12.8287C15.3 11.5359 16 9.8453 16 7.9558C16 3.58011 12.4 0 8 0C3.6 0 0 3.67956 0 8.05525C0 12.4309 3.6 16.011 8 16.011C9.8 16.011 11.5 15.4144 12.9 14.3204L16.6 18L18 16.5083ZM8 14.0221C4.7 14.0221 2 11.337 2 8.05525C2 4.77348 4.7 2.0884 8 2.0884C11.3 2.0884 14 4.77348 14 8.05525C14 11.337 11.3 14.0221 8 14.0221Z"
+                  fill="black" />
+              </svg>
+
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-user-item">
             <a class="navigation-user-link navigation-user-link-favorite" href="#">
-              <span class="visualy-hidden">Избранное</span>
+              <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M8.9 17C8.6 17 8.3 16.9 8.1 16.6C2.7 10.5 1.4 9.1 1.1 8.7C0.4 7.8 0 6.6 0 5.4C0 2.4 2.4 0 5.5 0C6.8 0 8 0.5 9 1.3C10 0.5 11.3 0 12.5 0C15.5 0 18 2.4 18 5.4C18 6.7 17.5 7.9 16.7 8.8L9.7 16.7C9.5 16.9 9.3 17 8.9 17ZM2.9 7.5C3.2 7.9 6.4 11.5 9 14.4L15.2 7.4C15.7 6.9 15.9 6.2 15.9 5.4C15.9 3.6 14.4 2.1 12.6 2.1C11.6 2.1 10.6 2.6 9.9 3.4C9.6 3.7 9.3 3.8 9 3.8C8.7 3.8 8.4 3.6 8.2 3.4C7.5 2.6 6.5 2.1 5.5 2.1C3.7 2.1 2.2 3.6 2.2 5.4C2.1 6.3 2.5 7 2.9 7.5C2.8 7.5 2.8 7.5 2.9 7.5Z"
+                  fill="black" />
+              </svg>
+
+              <span class="visually-hidden">Избранное</span>
               <span class="favorite-icon-heart">12</span>
             </a>
           </li>
@@ -128,15 +140,27 @@
           <h3 class="visually-hidden">Фильтр справа, стоимость и кнопки применения и сброса</h3>
           <fieldset class="catalog-filter-group catalog-filter-price">
             <!--Фильтр стоимости: поля для ввода нижней и верхней границы, бегунок-->
-            <legend class="catalog-filter-tittle">Стоимость, ₽:</legend>
-            <label class="filter-price-range">от<input type="number" name="min-value" value="0"></label>
-            <label class="filter-price-range">до<input type="number" name="max-value" value="9000"></label>
-            <button class="range-slider value-min" type="button">
-              <span class="visually-hidden">Нижняя граница стоимости</span>
-            </button>
-            <button class="range-slider value-max" type="button">
-              <span class="visually-hidden">Верхняя граница стоимости</span>
-            </button>
+            <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+            <div class="price-range">
+              <ul class="price-range-list">
+                <li class="price-range-input">
+                  <input class="range-input range-input-min" type="number" name="min-value" value="0">
+                  <label class="filter-price-range" for="range-input-min">от</label>
+                </li>
+                <li class="price-range-input">
+                  <input class="range-input range-input-max" type="number" name="max-value" value="9000">
+                  <label class="filter-price-range" for="range-input-max">до</label>
+                </li>
+              </ul>
+            </div>
+            <div class="range-slider-value">
+              <button class="range-slider value-min" type="button">
+                <span class="visually-hidden">Нижняя граница стоимости</span>
+              </button>
+              <button class="range-slider value-max" type="button">
+                <span class="visually-hidden">Верхняя граница стоимости</span>
+              </button>
+            </div>
           </fieldset>
           <div class="filter-button-form">
             <button class="catalog-filter-submit" type="submit">Применить</button>
@@ -147,27 +171,31 @@
     </header>
     <!--Результаты поиска-->
     <section class="catalog">
-      <h2>Найдено гостиниц: 38</h2>
-      <select class="select-control" aria-label="Сортировка">
-        <option class="select-control-text" value="cheap">Сначала дешевые</option>
-      </select>
-      <ul class="buttons-view">
-        <li class="buttons-view-item">
-          <a class="buttons-view-tile" href="#">
-            <span class="visually-hidden">Плитка</span>
-          </a>
-        </li>
-        <li class="buttons-view-item">
-          <a class="buttons-view-card" href="#">
-            <span class="visually-hidden">Карточка</span>
-          </a>
-        </li>
-        <li class="buttons-view-item">
-          <a class="buttons-view-list" href="#">
-            <span class="visually-hidden">Список</span>
-          </a>
-        </li>
-      </ul>
+      <div class="catalog-result">
+        <h2 class="catalog-search-title">Найдено гостиниц: 38</h2>
+        <div class="select-wrapper">
+          <select class="select-control" aria-label="Сортировка">
+            <option class="select-control-text" value="cheap">Сначала дешевые</option>
+          </select>
+        </div>
+        <ul class="buttons-view">
+          <li class="buttons-view-item-current">
+            <a class="buttons-view-tile" href="#">
+              <span class="visually-hidden">Плитка</span>
+            </a>
+          </li>
+          <li class="buttons-view-item">
+            <a class="buttons-view-card" href="#">
+              <span class="visually-hidden">Карточка</span>
+            </a>
+          </li>
+          <li class="buttons-view-item">
+            <a class="buttons-view-list" href="#">
+              <span class="visually-hidden">Список</span>
+            </a>
+          </li>
+        </ul>
+      </div>
       <!--Каталог гостиниц: карточки-->
       <ul class="product-list">
         <li class="product-cards">
@@ -175,54 +203,56 @@
             <img class="product-card-img" src="images/hotels/amara.jpg" width="300" height="212"
               alt="Ночной вид на карьер">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
+            <div class="product-cards-wrapper">
+              <p class="product-card-type">Гостиница</p>
+              <p class="product-card-cost">От 4000 ₽</p>
+            </div>
           </a>
-          <p class="product-card-type">Гостиница</p>
-          <p class="product-card-cost">От 4000 ₽</p>
           <a class="product-card-button-about" href="#">Подробнее</a>
           <a class="add-button-favorite" href="#">В избранное</a>
           <p class="product-stars product-stars-four icon-star"><span class="visually-hidden">4 звезды</span></p>
           <p class="product-card-reiting">Рейтинг: 8,5</p>
         </li>
-      </ul>
-      <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
             <img class="product-card-img" src="images/hotels/poco-diablo.jpg" width="300" height="212"
               alt="Вид на каньон с радугой после грозы">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
+            <div class="product-cards-wrapper">
+              <p class="product-card-type">Гостиница</p>
+              <p class="product-card-cost">От 5000 ₽</p>
+            </div>
           </a>
-          <p class="product-card-type">Гостиница</p>
-          <p class="product-card-cost">От 5000 ₽</p>
           <a class="product-card-button-about" href="#">Подробнее</a>
           <a class="add-button-favorite" href="#">В избранное</a>
           <p class="product-stars product-stars-four icon-star"><span class="visually-hidden">4 звезды</span></p>
           <p class="product-card-reiting">Рейтинг: 9,2</p>
         </li>
-      </ul>
-      <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
             <img class="product-card-img" src="images/hotels/desert-quai.jpg" width="300" height="212"
               alt="Каньон в свете дневного солнца">
             <h3 class="product-card-title">Desert Quail Inn</h3>
+            <div class="product-cards-wrapper">
+              <p class="product-card-type">Гостиница</p>
+              <p class="product-card-cost">От 2500 ₽</p>
+            </div>
           </a>
-          <p class="product-card-type">Гостиница</p>
-          <p class="product-card-cost">От 2500 ₽</p>
           <a class="product-card-button-about" href="#">Подробнее</a>
           <a class="add-button-favorite" href="#">В избранное</a>
           <p class="product-stars product-stars-three icon-star"><span class="visually-hidden">3 звезды</span></p>
           <p class="product-card-reiting">Рейтинг: 6,9</p>
         </li>
-      </ul>
-      <ul class="product-list">
         <li class="product-cards">
           <a class="product-card-link" href="#">
             <img class="product-card-img" src="images/hotels/greentree.jpg" width="300" height="212"
               alt="Каньон на фоне ночного неба">
             <h3 class="product-card-title">GreenTree Inn</h3>
+            <div class="product-cards-wrapper">
+              <p class="product-card-type">Гостиница</p>
+              <p class="product-card-cost">От 1500 ₽</p>
+            </div>
           </a>
-          <p class="product-card-type">Гостиница</p>
-          <p class="product-card-cost">От 1500 ₽</p>
           <a class="product-card-button-about" href="#">Подробнее</a>
           <a class="add-button-favorite" href="#">В избранное</a>
           <p class="product-stars product-stars-two icon-star"><span class="visually-hidden">2 звезды</span></p>
@@ -253,53 +283,67 @@
 
     </section>
 
-
-    <!--Рассылка catalog-->
-    <section class="subscribe-catalog">
-      <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-      <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-        <p class="subscribe-form-name">
-          <label class="visually-hidden" for="email">
-            <span class="visually-hidden">Введите ваш e-mail</span>
-            <input class="subscribe-field" id="email" type="email" placeholder="Ваш e-mail" name="email" required>
-          </label>
-        </p>
+    <!--Рассылка-->
+    <section class="subscribe subscribe-catalog">
+      <h2 class="subscribe-title subscribe-title-catalog">Подпишитесь на рассылку</h2>
+      <p class="subscribe-desc subscribe-desc-catalog">Только полезная информация и никакого спама, честное
+        бойскаутское!</p>
+      <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
+        <label class="subscribe-field-label" for="email">
+          <span class="visually-hidden">Введите ваш e-mail</span>
+          <input class="subscribe-field" id="email" type="email" placeholder="Ваш e-mail" name="email" required>
+        </label>
         <button class="button-subscribe" type="submit">Подписаться</button>
       </form>
     </section>
+    </main>
 
     <!-- Подвал -->
-    <footer class="page-footer">
+    <footer class="page-footer page-container">
       <section class="footer-social">
         <h2 class="visually-hidden">О Седоне - в социальных сетях</h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="footer-social-link" href="#">
+              <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link" href="https://t.me/htmlacademy">
+              <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16.785 0.0992597L0.840489 6.24776C-0.247661 6.68481 -0.241365 7.29184 0.640845 7.56253L4.73445 8.83953L14.2058 2.8637C14.6537 2.59121 15.0629 2.7378 14.7265 3.03636L7.05283 9.96185H7.05103L7.05283 9.96275L6.77045 14.1823C7.18413 14.1823 7.36669 13.9925 7.59871 13.7686L9.58705 11.8351L13.7229 14.89C14.4855 15.31 15.0332 15.0941 15.2229 14.1841L17.9379 1.38885C18.2158 0.274623 17.5126 -0.229883 16.785 0.0992597Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="footer-social-link" href="#">
+              <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M18.607 0H3.17413C1.31343 0 0 1.59375 0 3.4V13.4937C0 15.4062 1.31343 17 3.17413 17H18.8259C20.4677 17 22 15.4062 22 13.6V3.4C21.7811 1.59375 20.4677 0 18.607 0ZM7.66169 12.5375V4.4625L14.995 8.5L7.66169 12.5375Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">YouTube</span>
             </a>
           </li>
         </ul>
       </section>
       <section class="footer-contacts">
-        <h2 class="visually-hidden">Контаты</h2>
+        <h2 class="visually-hidden">Контакты</h2>
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a class="copyright" href="https://htmlacademy.ru/">
-          <span class="visually-hidden">Сделано в HTML Academy</span>
-          <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33"
-            alt="Логотип HTML Academy">
-        </a>
       </section>
+      <a class="copyright" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">Сделано в HTML Academy</span>
+        <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33"
+          alt="Логотип HTML Academy">
+      </a>
     </footer>
   </body>
 
