--- a/index.html
+++ b/index.html
@@ -29,12 +29,24 @@
         <ul class="navigation-user">
           <li class="navigation-user-item">
             <a class="navigation-user-link navigation-user-link-search" href="#">
-              <span class="visualy-hidden">Поиск</span>
+              <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M18 16.5083L14.3 12.8287C15.3 11.5359 16 9.8453 16 7.9558C16 3.58011 12.4 0 8 0C3.6 0 0 3.67956 0 8.05525C0 12.4309 3.6 16.011 8 16.011C9.8 16.011 11.5 15.4144 12.9 14.3204L16.6 18L18 16.5083ZM8 14.0221C4.7 14.0221 2 11.337 2 8.05525C2 4.77348 4.7 2.0884 8 2.0884C11.3 2.0884 14 4.77348 14 8.05525C14 11.337 11.3 14.0221 8 14.0221Z"
+                  fill="black" />
+              </svg>
+
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-user-item">
             <a class="navigation-user-link navigation-user-link-favorite" href="#">
-              <span class="visualy-hidden">Избранное</span>
+              <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M8.9 17C8.6 17 8.3 16.9 8.1 16.6C2.7 10.5 1.4 9.1 1.1 8.7C0.4 7.8 0 6.6 0 5.4C0 2.4 2.4 0 5.5 0C6.8 0 8 0.5 9 1.3C10 0.5 11.3 0 12.5 0C15.5 0 18 2.4 18 5.4C18 6.7 17.5 7.9 16.7 8.8L9.7 16.7C9.5 16.9 9.3 17 8.9 17ZM2.9 7.5C3.2 7.9 6.4 11.5 9 14.4L15.2 7.4C15.7 6.9 15.9 6.2 15.9 5.4C15.9 3.6 14.4 2.1 12.6 2.1C11.6 2.1 10.6 2.6 9.9 3.4C9.6 3.7 9.3 3.8 9 3.8C8.7 3.8 8.4 3.6 8.2 3.4C7.5 2.6 6.5 2.1 5.5 2.1C3.7 2.1 2.2 3.6 2.2 5.4C2.1 6.3 2.5 7 2.9 7.5C2.8 7.5 2.8 7.5 2.9 7.5Z"
+                  fill="black" />
+              </svg>
+
+              <span class="visually-hidden">Избранное</span>
               <span class="favorite-icon-heart">12</span>
             </a>
           </li>
@@ -97,19 +109,19 @@
         <ul class="infrastructure-list">
           <li class="infrastructure-item infrastructure-item-hotel">
             <h3 class="infrastructure-title">Жильё</h3>
-              <p class="infrastructure-desc infrastructure-desc-icon">Рекомендуем пожить в настоящем мотеле,
-                всё как в кино!
-              </p>
+            <p class="infrastructure-desc infrastructure-desc-icon">Рекомендуем пожить в настоящем мотеле,
+              всё как в кино!
+            </p>
 
           </li>
           <li class="infrastructure-item infrastructure-item-burger">
-              <h3 class="infrastructure-title">Еда</h3>
-              <p class="infrastructure-desc infrastructure-desc-icon">Всегда заказывайте топовый фирменный бургер,
-                вы не разочаруетесь!</p>
+            <h3 class="infrastructure-title">Еда</h3>
+            <p class="infrastructure-desc infrastructure-desc-icon">Всегда заказывайте топовый фирменный бургер,
+              вы не разочаруетесь!</p>
           </li>
           <li class="infrastructure-item infrastructure-item-gift">
-              <h3 class="infrastructure-title">Сувениры</h3>
-              <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
+            <h3 class="infrastructure-title">Сувениры</h3>
+            <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
