--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <path d="M3.393 9v2h14V9h-14Z" />
                   </svg>
                 </button>
-                <input class="modal-form-field-count" id="adults" type="number" name="adults" min="1" value="2" readonly>
+                <input class="modal-form-field-count" id="adults" type="number" name="adults" min="1" value="2">
                 <button class="modal-form-field-button modal-form-field-plus" type="button">
                   <svg class="modal-form-field-icon" aria-hidden="true" focusable="false" fill="currentColor" role="img"
                     aria-label="Знак плюс." xmlns="http://www.w3.org/2000/svg" width="20" height="20"
@@ -291,8 +291,7 @@
                     <path d="M3.393 9v2h14V9h-14Z" />
                   </svg>
                 </button>
-                <input class="modal-form-field-count" id="kids" type="number" name="kids" min="0" value="2" readonly
-                  tabindex="-1">
+                <input class="modal-form-field-count" id="kids" type="number" name="kids" min="0" value="2">
                 <button class="modal-form-field-button modal-form-field-plus" type="button">
                   <svg class="modal-form-field-icon" aria-hidden="true" focusable="false" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Знак плюс." width="20" height="20"
