--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h3>Мало <br>туристов</h3>
             <p>Большинство едет в Гранд <br>Каньон и толпится там</p>
           </li>
-          <li class="advantages-item advantages-item-full">
+          <li class="advantages-item advantages-item-full invert">
             <div class="advantages-item-wrapper">
               <h3>Там есть <br>мост дьявола</h3>
               <p>Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется</p>
