--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h2 class="search-title">Заинтересовались?</h2>
         <p class="search-desc">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в
           Седоне</p>
-        <a class="search-button" href="#">Поиск гостиницы в Седоне</a>
+        <button class="search-button" href="#">Поиск гостиницы в Седоне</button>
       </section>
       <!--Рассылка-->
       <section class="subscribe">
